examples/kubernetes/network-application/02-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unifi
  name: network-application
  labels:
    app: network-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-application
  template:
    metadata:
      labels:
        app: network-application
    spec:
      containers:
        - name: network-application
          image: ghcr.io/stellirin/unifi-network-application:latest
          imagePullPolicy: Always
          ports:
            - name: discoverable
              hostPort: 1900
              containerPort: 1900
              protocol: UDP
            - name: stun
              hostPort: 3478
              containerPort: 3478
              protocol: UDP
            - name: speed-test
              hostPort: 6789
              containerPort: 6789
              protocol: TCP
            - name: communication
              hostPort: 8080
              containerPort: 8080
              protocol: TCP
            - name: network-application
              hostPort: 8443
              containerPort: 8443
              protocol: TCP
            - name: http-redirect
              hostPort: 8880
              containerPort: 8880
              protocol: TCP
            - name: https-redirect
              hostPort: 8843
              containerPort: 8843
              protocol: TCP
            - name: discovery
              hostPort: 10001
              containerPort: 10001
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /var/lib/unifi
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 1024Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: network-application-pvc
