examples/kubernetes/network-application/03-Service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: unifi
  name: network-application
  labels:
    app: network-application
spec:
  type: ClusterIP
  selector:
    app: network-application
  ports:
  - name: https
    protocol: TCP
    port: 8443
    targetPort: network-application
