examples/kubernetes/network-application/05-IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: unifi
  name: network-application
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`unifi.example.com`)
      services:
        - kind: Service
          name: network-application
          port: 8443
          scheme: https
  tls:
    secretName: unifi-certificate
