examples/kubernetes/network-application/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: unifi
  name: network-application
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`unifi.example.com`)
      services:
        - kind: Service
          name: network-application
          port: 8443
          scheme: https
  tls:
    secretName: unifi-certificate
